src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_var_bad_too_few_top_level.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
fn a(a, b, c) { "err" }
a(0, 1)

ERROR
invalid number of arguments, expected 3 but got 2
3 |  a(0, 1)
  |  ^^^^^^^
