src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_var_bad_too_many_top_level.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
fn a() { "err" }
a(0)

ERROR
invalid number of arguments, expected 0 but got 1
3 |  a(0)
  |  ^^^^
