src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_with_args_top_level.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
fn f(a, b, c) {}

f(1, 2, 3)

OK
.fn @main
  params 0
  stack 4
  .code
  0  lsmi r1, 1
  1  lsmi r2, 2
  2  lsmi r3, 3
  3  call r0, fn1   ; fn1=f
  4  ret

.fn f
  params 3
  stack 4
  .locals
    a = r1
    b = r2
    c = r3
  .code
  0  lnil r0
  1  ret
