src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_with_bad_args_top_level.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
// the compiler can do some basic arity checking
// in case the callee is a function declaration,
// and it's clear syntactically:

fn f(a, b, c) { }

// we could choose to just emit a `dyn` call and
// let this explode at runtime, and this is somewhat
// unusual for a mostly runtime-checked language,
// but it's useful so this will error at compile time:

f(0)

ERROR
invalid number of arguments, expected 3 but got 1
13 |  f(0)
   |  ^^^^
