src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_captures.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
fn a() {
  let v = 0

  let b = fn() {
    v
  }
}

OK
.fn @main
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret

.fn a
  params 0
  stack 3
  .locals
    v = r1
    b = r2
  .code
  0  lsmi r1, 0
  1  lclosure r2, l0   ; closure{@37..48}, captures=1
  2  lnil r0
  3  ret

.fn closure{@37..48}
  params 0
  stack 1
  .captures
    v = r1
  .code
  0  lcap r0, c0
  1  ret
