src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_captures_bad.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
fn a() {
  let v = 0

  let b = fn() {
    fn c() {
      // won't work, because a regular `fn` is in the path
      let d = fn() {
        v
      }
    }
  }
}

ERROR
functions can't capture variables from outer scope
2 |    let v = 0
  |        ^
  |
  > help: use a closure instead: `let f = fn() {}`
