src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_multiple.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
// being able to declare multiple functions is kinda important
fn a() {}
fn b() {}

OK
.fn @main
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret

.fn a
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret

.fn b
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
