src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_and_no_tail.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let a = 0
let b = 1

if a < b and b >= a {
  return
}



OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
    b = r2
  .code
  0  lsmi r1, 0
  1  lsmi r2, 1
  2  islt r1, r2
  3  jmp 5   ; to 8
  4  isge r2, r1
  5  jmp 3   ; to 8
  6  lnil r0
  7  ret
